<resources>
    <string name="app_name">Planet Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quiz_text">Planet Quiz</string>
    <string name="res_text">%s %s</string>

    <string name="quiz_largest_planet">What is the largest planet?</string>
    <string name="quiz_most_moon">Which planet has the most moons?</string>
    <string name="quiz_spin_side">Which planet spins on its side?</string>

    <string name="ans_largest_planet">Jupiter is the largest planet and is 2.5 times the mass of all the other planets put together.</string>
    <string name="ans_most_moon">Saturn has the most moons and has 82 moons.</string>
    <string name="ans_spin_side">Uranus spins on its side with its axis at nearly a right angle to the sun.</string>

    <string name="mercury">MERCURY</string>
    <string name="venus">VENUS</string>
    <string name="earth">EARTH</string>
    <string name="mars">MARS</string>
    <string name="jupiter">JUPITER</string>
    <string name="saturn">SATURN</string>
    <string name="uranus">URANUS</string>
    <string name="neptune">NEPTUNE</string>
</resources>