<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".QuestionsFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/quiz_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/quiz_text"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/quiz_largest_planet"
            android:text="@string/quiz_largest_planet"
            style="@style/quiz_box" />

        <TextView
            android:id="@+id/quiz_most_moon"
            android:text="@string/quiz_most_moon"
            style="@style/quiz_box" />

        <TextView
            android:id="@+id/quiz_spin_side"
            android:text="@string/quiz_spin_side"
            style="@style/quiz_box" />

    </LinearLayout>
</layout>